@@ -1,3 +1,9 @@
+2002-03-05  Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* NSOutlineView-test/NSOutlineView-test.m made modifications
+	to the [NSOutlineViewTest -outlineView:child:ofItem:] method
+	to return children starting from zero instead of one.
+
 2002-03-05  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
 
 	* NSTableView-test/NSTableView-test.m ([NSTableViewTest -init]): 
